# This file is part of the Minnesota Population Center's NHGISXWALK.
# For copyright and licensing information, see the NOTICE and LICENSE files
# in this project's top-level directory, and also on-line at:
#   https://github.com/ipums/nhgisxwalk

[build-system]
requires = [
    "black",
    "isort",
    "pyproject-flake8",
    "setuptools>=61.0.0",
    "versioneer[toml]==0.26",
]
build-backend = "setuptools.build_meta"

[project]
name = "nhgisxwalk"
dynamic = ["version"]
maintainers = [
    {name = "James D. Gaboardi", email = "jgaboardi@gmail.com"},
]
license = {text = "MPL-2.0"}
description = "Spatio-temporal NHGIS Crosswalks"
keywords = ["NHGIS", "crosswalks", "spatio-temporal data"]
readme = {text = """\
This pacakge allows for the generation of temporal crosswalks of census
geographic data built from the smallest intersecting units (atoms).
""", content-type = "text/x-rst"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: GIS",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "black",
    "codecov",
    "coverage",
    "flake8",
    "geopandas",
    "handcalcs",
    "isort",
    "nbsphinx",
    "numpy",
    "numpydoc",
    "pandas",
    "pip",
    "pre-commit",
    "pyproject-flake8",
    "pytest",
    "pytest-cov",
    "sphinx",
    "sphinxcontrib-bibtex",
    "sphinx-gallery",
    "sphinx_bootstrap_theme",
    "twine",
    "watermark",
    "wheel",
]

[project.urls]
Home = "https://tech.popdata.org/nhgisxwalk/"
Repository = "https://github.com/ipums/nhgisxwalk"

[tool.setuptools.packages.find]
include = [
    "nhgisxwalk",
    "nhgisxwalk.*",
]

[tool.setuptools.package-data]
nhgisxwalk = [
    "testing_data_subsets/*",
]

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "nhgisxwalk/_version.py"
versionfile_build = "nhgisxwalk/_version.py"
tag_prefix = "v"
parentdir_prefix = "nhgisxwalk-"

[tool.isort]
profile = "black"
src_paths = ["nhgisxwalk"]

[tool.flake8]
max_line_length = 88
per-file-ignores = [
    "*__init__.py:F401",
]
exclude = [
    "versioneer.py",
    "nhgisxwalk/_version.py"
]

[tool.black]
line-length = 88
