# This file is part of the Minnesota Population Center's NHGISXWALK.
# For copyright and licensing information, see the NOTICE and LICENSE files
# in this project's top-level directory, and also on-line at:
#   https://github.com/ipums/nhgisxwalk

[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "nhgisxwalk"
dynamic = ["version"]
maintainers = [
    {name = "James D. Gaboardi", email = "jgaboardi@gmail.com"},
]
license = {text = "MPL-2.0"}
description = "Spatio-temporal NHGIS Crosswalks"
keywords = ["NHGIS", "crosswalks", "spatio-temporal data"]
readme = {text = """\
This pacakge allows for the generation of temporal crosswalks of census
geographic data built from the smallest intersecting units (atoms).
""", content-type = "text/x-rst"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: GIS",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.9"
dependencies = [
    "geopandas",
    "numpy",
    "pandas",
    "pip",
]

[project.optional-dependencies]
notebooks = [
    "handcalcs",
]

dev = [
    "black",
    "codecov",
    "nbsphinx",
    "numpydoc",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "sphinx",
    "sphinxcontrib-bibtex",
    "sphinx-gallery",
    "sphinx_bootstrap_theme",
    "twine",
    "watermark",
    "wheel",
]


[project.urls]
Home = "https://tech.popdata.org/nhgisxwalk/"
Repository = "https://github.com/ipums/nhgisxwalk"

[tool.setuptools.packages.find]
include = [
    "nhgisxwalk",
    "nhgisxwalk.*",
]

[tool.setuptools.package-data]
nhgisxwalk = [
    "testing_data_subsets/*",
]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "UP", "N", "B", "A", "C4", "SIM", "ARG"]
target-version = "py39"
ignore = [
    "B006",
    "B008",
    "B009",
    "B010",
    "C408",
    "E731",
    "F401",
    "F403",
    "N803",
    "N806",
    "N999",
    "UP007"
]
exclude = ["nhgisxwalk/tests/*"]

[tool.coverage.run]
source = ["./nhgisxwalk"]

[tool.coverage.report]
exclude_lines = [
    "if self.debug:",
    "pragma: no cover",
    "raise NotImplementedError",
    "except ModuleNotFoundError:",
    "except ImportError",
]
ignore_errors = true
omit = ["nhgisxwalk/tests/*"]